# easy_video

./: .gitignore  README.md  __init__.py  ffmpeg_infos.py  ffmpeg_reader.py  ffmpeg_writer.py  os_dependency.py  pyproject.toml  setup.py  video_reader.py  video_writer.py
easy_video/: __init__.py  ffmpeg_infos.py  ffmpeg_reader.py  ffmpeg_writer.py  utils.py  video_reader.py  video_writer.py
example/: examples.py
